<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/backBtn_desc"
                android:src="@drawable/backbtnimg"
                android:background="@null"/>

            <TextView
                android:id="@+id/activityTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_title"
                android:textAlignment="center"
                android:textColor="#618264"
                android:textStyle="bold"
                android:textSize="24sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_label"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/addImagePlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/addimageplaceholder"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/titleTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:padding="15sp"
            android:textColorHint="#C4C4C4"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/visitDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_date_label"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/visitDateTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/visitDate_hint"
            android:inputType="date"
            android:textSize="16sp"
            android:padding="15sp"
            android:textColorHint="#C4C4C4"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/datepickericon"/>

        <TextView
            android:id="@+id/visitTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_time_label"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/visitTimeTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/visit_time_hint"
            android:inputType="time"
            android:textSize="16sp"
            android:padding="15sp"
            android:textColorHint="#C4C4C4"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/timepickericon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/countryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country_label"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/countryTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/input_field"
                    android:ems="10"
                    android:hint="@string/country_hint"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:padding="15sp"
                    android:textColorHint="#C4C4C4"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/continentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continent_label"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/continentTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/input_field"
                    android:ems="10"
                    android:hint="@string/continent_hint"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:padding="15sp"
                    android:textColorHint="#C4C4C4"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/additionalInformationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_information_label"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/additionalInformationTextField"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/additional_information_hint"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:padding="15sp"
            android:textColorHint="#C4C4C4"
            android:layout_gravity="start"
            android:gravity="start"/>

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"
            android:text="@string/add_btn_text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>