<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/addimageplaceholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/continent_card_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/continent_label"
                    android:textSize="12sp"
                    android:textColor="#618264"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/country_card_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country_label"
                    android:textSize="11sp"
                    android:textColor="#BFBFBF"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/date_card_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:text="@string/date_card_placeholder"
                    android:textSize="11sp"
                    android:textColor="#BFBFBF"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tdseparate_card_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/datetime_separator"
                    android:textSize="11sp"
                    android:textColor="#BFBFBF"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/time_card_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/visit_time_hint"
                    android:textSize="11sp"
                    android:textColor="#BFBFBF"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_title"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>